--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
     margin: 0;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
+    padding: 100px;
     display: flex;
     justify-content: center;
 }
