--- a/style.css
+++ b/style.css
@@ -11,9 +11,26 @@ body {
     padding: 50px;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
-iframe {
-    visibility: hidden;
+h3 {
     position: absolute;
+    color: white;
+    top: 100px;
+    font-size: 1.4em;
+}
+
+button {
+    position: absolute;
+    top: 50%;
+    background-color: rgba(0,0,0,.01);
+    border: none;
+    color: white;
+    font-size: 5em;
+}
+
+button:hover {
+    color: purple;
+    cursor: pointer;
 }
