--- a/style.css
+++ b/style.css
@@ -26,10 +26,12 @@ h3 {
     color: white;
     font-size: 1.5em;
     right: 500px;
+    top: 60px;
 }
 
 #pauseBtn:hover {
     cursor: pointer;
+    color: purple;
 }
 
 button {
