--- a/style.css
+++ b/style.css
@@ -5,45 +5,138 @@
 html {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
-    padding: 50px;
+    width: 1009px;
+    height: 800px;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
+}
+
+#selectBtn {
+    position: absolute;
+    color: rgba(124, 0, 219, 0.8);
+    z-index: 1;
+    font-size: 4em;
+    background-color: rgba(238, 232, 232, 0.8);
+    border: 5px solid rgba(124, 0, 219, 0.8);
+    width: 400px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#selectionContainer {
+    visibility: hidden;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    width: 500px;
+    height: 400px;
+    background-color: rgba(238, 232, 232, 0.8);
+    border: 5px solid rgba(124, 0, 219, 0.8);
+    color: rgba(124, 0, 219, 0.8);
+    margin-bottom: 50px;
+}
+
+.selectionHeader {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#charSelection {
+    z-index: 1;
+    width: 500px;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 5px solid rgba(124, 0, 219, 0.8);
+}
+
+#playerBike {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 49%;
+    border-right: 5px solid rgba(124, 0, 219, 0.8);
+}
+
+#playerCar {
+    width: 51%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#charSelection img {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+#playerCar img {
+    margin-top: 20px;
+}
+
+#playerBike:hover, #playerCar:hover, #selectBtn:hover, #startBtn:hover {
+    background-color: rgba(182, 112, 236, 0.5);
+    cursor: pointer;
+}
+
+#startBtn {
+    height: 100px;
+    width: 100%;
+    background-color: rgba(0,0,0,.01);
+    border: none;
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+canvas {
+    position: absolute;
+}
+
+h1 {
+    position: absolute;
+    top: 10px;
+    color: white;
+    z-index: 1;
 }
 
 h3 {
     position: absolute;
     color: white;
-    top: 100px;
+    top: 75px;
     font-size: 1.4em;
+    z-index: 1;
 }
 
 #pauseBtn {
     position: absolute;
     color: white;
     font-size: 1.5em;
-    right: 500px;
-    top: 60px;
+    right: 50px;
+    top: 10px;
+    z-index: 1;
 }
 
 #pauseBtn:hover {
     cursor: pointer;
     color: purple;
-}
-
-button {
-    position: absolute;
-    top: 50%;
-    background-color: rgba(0,0,0,.01);
-    border: none;
-    color: white;
-    font-size: 5em;
-}
-
-button:hover {
-    color: purple;
-    cursor: pointer;
 }
